less/plugin-ecommerce.less
//
// Copyright 2014 BaseKit Platform Ltd
//
// ---------
// ecommerce
// ---------

.bk-pt-store .page-content {
    @media @mobile {
        padding-top: 20px;
    }
}




// ----------------------------------
// Images
// ----------------------------------

.product-item-image .image,
.product-image .image {
    padding: 10px;
}




// ----------------------------------
// Single Product
// ----------------------------------

.ecomproduct {
    .product-article {
        .flex;
        -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    }
    .product-images,
    .product-content {
        -webkit-flex: 0 0 48%;
        -ms-flex: 0 0 48%;
        flex: 0 0 48%;
        -webkit-align-self: stretch;
        -ms-flex-item-align: stretch;
        align-self: stretch;
    }
    .product-images {
        margin-right: 4%;
    }
    .product-title {
        padding: 0;
        font-size: bkscale(@font-swatch1-font-size,0.8);
        line-height: bkscale(@font-swatch1-line-height,0.9);
    }
    .product-price {
        color: @color-swatch5;
    }
    @media only screen and (max-width: 850px) {
        .product-images {
            -webkit-flex: 0 0 40%;
            -ms-flex: 0 0 40%;
            flex: 0 0 40%;
        }
        .product-content {
            -webkit-flex: 0 0 56%;
            -ms-flex: 0 0 56%;
            flex: 0 0 56%;
        }
    }

    @media only screen and (max-width: 700px) {
        .product-images,
        .product-content {
            -webkit-flex: 0 0 100%;
            -ms-flex: 0 0 100%;
            flex: 0 0 100%;
            margin-right: 0;
        }
    }
    .button {
        padding: 10px 25px 8px;
        width: 100%;
        margin-top: 20px;
        text-align: center;
        &:hover {
            text-decoration: none;
        }
    }
    .form-body {
        background-color: #f2f2f2;
        padding: 20px;
        .label {
            color: @color-swatch4;
        }
    }
    .product-body,
    p {
        font-size: bkscale(@font-swatch5-font-size,0.9);
        line-height: bkscale(@font-swatch5-line-height,0.9);
    }
    .product-body,
    .fieldset,
    .product-actions {
        margin-bottom: 30px;
        display: inline-block;
        width: 100%;
    }
}




// ----------------------------------
// Products List
// ----------------------------------

.ecomproductslist {
    .clearfix;
    .listing-title {
        display: none;
    }
}




// Ecommerce Products Filter
// --------------------------

.ecomproductslist .form {
    float: left;
    width: 100%;
    @media only screen and (min-width: 770px) {
        margin-bottom: 20px;
    }
}

.ecomproductslist .form,// Ecom Form
.ecomproductslist .fieldset--filters .form-body,// Ecom Filters
.ecomproductslist .fieldset--search .form-body { // Ecom Search
    display: block;
    @media screen and (min-width:481px) and (max-width:769px) {
        .flex;
        width: 100%;
    }
}

// Hide products search & show 'clear search' button
.ecomproductslist .fieldset--search {
    .legend,
    .form-body .form-group:first-child,
    .form-body .form-group:nth-child(2) {
        display: none;
    }
    .form-body .form-group:last-child {
        margin: 0;
        width: 100%;
        @media @tablet {
            margin-right: 10px;
        }
        .button--clear {
            width: 100%;
            padding: 10px 10px 8px;
            margin-bottom: 20px;
            text-align: center;
            color: #E76A6A;
            border: 2px solid #E76A6A;
            @media @tablet {
                height: 44px;
                line-height: 44px;
                margin-bottom: 20px;
                padding: 0 25px;
            }
        }
    }
}
.ecomproductslist { // No products found message
    .message {
        color: #E76A6A;
    }
    .message {
        padding-left: 0;
        text-align: left;
    }
    .message {
        &:before {
            display: none;
        }
        p {
            position: relative;
            color: #E76A6A;
            padding-left: 25px;
        }
        p:before {
            content: "\f040";
            font-family: 'FontAwesome', sans-serif;
            padding-right: 10px;
        }
    }
}
/* ... */

